# WordsCounter

./: CMakeLists.txt  Format.cpp  Format.h  README.md  WordsCounter.cpp  WordsCounter.h  WordsCounterFlashableSortedBy.h  WordsCounterSortable.h  WordsCounterSortedFlushable.h  WordsFileReader.cpp  WordsFileReader.h  WordsStreamReaderImpl.h  main.cpp
tests/: Tests.cpp
